--- a/SMTL/app/build.gradle
+++ b/SMTL/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.smtl.loginregister"
-        minSdkVersion 15
-        targetSdkVersion 23
+        applicationId "com.tekinarslan.material.sample"
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -21,9 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
