--- a/SMTL/app/src/main/AndroidManifest.xml
+++ b/SMTL/app/src/main/AndroidManifest.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.smtl.loginregister">
-
+    package="com.tekinarslan.material.sample" >
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".IntroActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".ChartActivity"/>
-        <activity android:name=".order.OrderActivity"/>
-        <activity android:name=".order.ItemDetailActivity"/>
-        <activity android:name=".order.ItemActivity"/>
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SignupActivity"/>
+        <activity android:name=".customer.ContentActivity"/>
+        <activity android:name=".customer.LaundrySearchActivity"/>
+        <activity android:name=".customer.OrderActivity"/>
+        <activity android:name=".customer.SettingActivity"/>
     </application>
 
 </manifest>
